--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@ build
 .committed
 CVS
 *.egg-info
-.git
 junk*
 MANIFEST
 .merkle
@@ -12,5 +11,6 @@ MANIFEST
 *.swp
 THIS.IS.A.GIT*
 tmp
-*ZZZ
 .wrapped
+*ZZZ
+.sharedev
