--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,8 @@
 # see http://docs.python.org/distutils/sourcedist.html
 
 include netDistrib.conf
-include countem CHANGES README.* TODO MANIFEST.in
+include countem installit test.all
+INCLUDE CHANGES README.* TODO MANIFEST.in
 include group* make* nacl* permit* restrict* rtb* subnets update*
 include vmInit vmKill vmLaunch vmList vmScrub vmUpdate vmVerify
 recursive-include vmmgr *.py
