--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,7 @@
 # see http://docs.python.org/distutils/sourcedist.html
 
 include netDistrib.conf
-include countem installit test.all update*
+include auto8it countem installit test.all update*
 INCLUDE CHANGES README.* TODO MANIFEST.in
 include group* make* nacl* permit* restrict* rtb* subnets vpcs
 include vmInit vmKill vmLaunch vmList vmScrub vmUpdate vmVerify
